--- a/source/config/scepsis.conf
+++ b/source/config/scepsis.conf
@@ -6,7 +6,7 @@
 #
 
 # Max number of micro code steps
-microCodeSteps 8
+#microCodeSteps 8
 
 # Size of memory in bytes
 memorySize 256
@@ -14,7 +14,3 @@ memorySize 256
 # File containing the instruction definitions
 instrDefFile scepsis.langdef
 
-instr mnem microcodeStep1 CS1 CS2 ... CSn
-instr mnem microcodeStep2 CS1 CS2 ... CSn
-...
-instr mnem microcodeStepN CS1 CS2 ... CSn
