--- a/source/config/scepsis.conf
+++ b/source/config/scepsis.conf
@@ -6,11 +6,11 @@
 #
 
 # Max number of micro code steps
-microCodeSteps = 5
+#microCodeSteps = 5
 
 # Size of memory in bytes
-memorySize = 256
+#memorySize = 256
 
 # File containing the instruction definitions
-langDefFile = "scepsis.langdef"
+langDefFile = "./config/scepsis.langdef"
 
