Compatibility with ooRexx
Changed the Open statements to Stream() to try and be compatible with ooRexx

--- a/source/config/scepsis.conf
+++ b/source/config/scepsis.conf
@@ -12,5 +12,5 @@
 #memorySize = 256
 
 # File containing the instruction definitions
-langDefFile = "./config/scepsis.langdef"
+langDefFile = "/home/gerard/git/SCEPSIS/source/config/scepsis.langdef"
 
