--- a/source/config/scepsis.conf
+++ b/source/config/scepsis.conf
@@ -14,3 +14,6 @@
 # File containing the instruction definitions
 langDefFile = "/home/gerard/git/SCEPSIS/source/config/scepsis.langdef"
 
+# Animation default per Instruction (Alternatives: R(un) and S(tep) )
+Animate = I
+
