--- a/source/config/scepsis.conf
+++ b/source/config/scepsis.conf
@@ -9,10 +9,15 @@
 #microCodeSteps = 7
 
 # Size of memory in bytes
-#memorySize = 256
+#memorySize = 65536
 
 # File containing the instruction definitions
-langDefFile = "/home/gerard/git/SCEPSIS/source/config/scepsis.langdef"
+langDefFile = .\config\scepsis.langdef
+
+# Files for SCEPSASM
+SRCfile = ./prime.sasm
+OBJfile = ./prime.memory
+LSTfile = ./prime.lst
 
 # Animation default per Instruction (Alternatives: R(un) and S(tep) )
 Animate = I
