Re-structure directories

--- a/source/config/scepsis.conf
+++ b/source/config/scepsis.conf
@@ -15,10 +15,14 @@
 langDefFile = .\config\scepsis.langdef
 
 # Files for SCEPSASM
-SRCfile = ./prime.sasm
-OBJfile = ./prime.memory
-LSTfile = ./prime.lst
+SRCfile = ./prime_sasm/prime.sasm
+OBJfile = ./prime_sasm/prime.memory
+LSTfile = ./prime_sasm/prime.lst
 
-# Animation default per Instruction (Alternatives: R(un) and S(tep) )
+# Animation default per (I)nstruction (Options: R(un) and S(tep) )
+#  when set to:		it will show the GUI screen:
+#  o (S)tep			- every microcode steps
+#  o (I)nstruction	- every instruction (opcode)
+#  o (R)un			- only at the end of the program
 Animate = I
 
