--- a/source/config/scepsis.conf
+++ b/source/config/scepsis.conf
@@ -24,5 +24,5 @@ LSTfile = ./prime_sasm/prime.lst
 #  o (S)tep			- every microcode steps
 #  o (I)nstruction	- every instruction (opcode)
 #  o (R)un			- only at the end of the program
-Animate = I
+Animate = R
 
